# LiteNES

./: CMakeLists.txt  toolchain.cmake
include/: common.h  fce.h  hal.h  ppu-internal.h
src/: hal.c  main.c  rom.c
src/fce/: common.c  cpu.c  fce.c  mmc.c  ppu.c  psg.c
